--- a/style/global.css
+++ b/style/global.css
@@ -1,6 +1,6 @@
 @tailwind components;
 @tailwind base;
 
-.swithToggle {
-  @apply w-4 h-4 bg-white shadow-xl rounded-full transform duration-300;
+.swithDot {
+  @apply w-4 h-4 bg-white shadow-xl rounded-full transform duration-200 dark:bg-gray-300;
 }
